--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 										<img src="images/pic01.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="landing.html" class="link">About Me</a></h3>
+										<h3><a href="aboutme.html" class="link">About Me</a></h3>
 										<p></p>
 									</header>
 								</article>
@@ -47,7 +47,7 @@
 										<img src="images/pic02.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="landing.html" class="link">Past Research Projects</a></h3>
+										<h3><a href="pastprojects.html" class="link">Past Projects</a></h3>
 										<p></p>
 									</header>
 								</article>
@@ -56,7 +56,7 @@
 										<img src="images/pic03.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="landing.html" class="link">Teaching and Outreach</a></h3>
+										<h3><a href="outreach.html" class="link">Teaching and Outreach</a></h3>
 										<p></p>
 									</header>
 								</article>
@@ -65,7 +65,7 @@
 										<img src="images/pic04.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="landing.html" class="link">Current Research: Planets and Life in Space Group at UC Berkeley</a></h3>
+										<h3><a href="currentproject.html" class="link">Current Research: Planets and Life in Space Group at UC Berkeley</a></h3>
 										<p></p>
 									</header>
 								</article>
