--- a/aboutme.html
+++ b/aboutme.html
@@ -83,7 +83,7 @@
 									<div class="contact-method">
 										<span class="icon solid alt fa-envelope"></span>
 										<h3>Email</h3>
-										<a href="#">anmoldesai02@gmail.com</a>
+										<a href="#">adesai@berkeley.edu</a>
 									</div>
 								</section>
 							</section>
