--- a/currentproject.html
+++ b/currentproject.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Outreach and Teaching</title>
+		<title>Current Project</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -45,7 +45,7 @@
 								<img src="images/pic07.jpg" alt="" />
 							</span>
 							<header class="major">
-								<h1>Outreach and Teaching</h1>
+								<h1>Current Research: Planets and Life in Space Group at UC Berkeley</h1>
 							</header>
 						</div>
 					</section>
@@ -59,19 +59,16 @@
 									<div class="content">
 										<div class="inner">
 											<header class="major">
-												<h3>Research Director: The Undergraduate Lab at Berkeley, Physics & Astronomy Division</h3>
+												<h3>Characterizing the TOI-1751 System and Evaluating Accuracy of Radial Velocity Measurements</h3>
 											</header>
-											<p> ULAB is an entirely undergraduate lab and class offered at UC Berkeley that aims to increase accessibility to physics and astronomy research by introducing students to technical and communication skills and guiding them through their own research projects. As co-director of the program I work towards fostering an inclusive environment and helping students build a strong foundation for their future in research. This past year we have also conducted a study using the Berkeley Undergraduate Research Evaluation Tools (BURET) to evaluate the impact of the program and target areas of improvement.
+											<p> As a UC Berkeley Summer Undergraduate Research Fellow, I began working under the guidance of Emma Turtelboom and Prof. Courtney Dressing on a project evaluating the effectiveness of the radial velocity method in detecting planetary mass for multiplanet systems. Continuing this work, I am now working on characterizing the TOI-1751 system using both radial velocity and system stability approaches.
+											</p>
 											<ul class="actions">
-												<li><a href="ULAB_APS_April_2022_Poster__Copy_.pdf" class="button">APS Spring '22 Poster</a></li>
-												<li><a href="AAPT Slides.pdf" class="button">AAPT Summer '22 Talk</a></li>
-												<li><a href="https://ulab.berkeley.edu/labs/physics" class="button">ULAB Website</a></li>
+												<li><a href="SURF Final Presentation.pdf" class="button">August '22 Presentation</a></li>
 											</ul>
 										</div>
 									</div>
 								</section>
-							</section>
-
 					</div>
 
 				<!-- Contact -->
