--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 										<img src="images/pic02.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="pastprojects.html" class="link">Past Projects</a></h3>
+										<h3><a href="outreach.html" class="link">Outreach and Teaching</a></h3>
 										<p></p>
 									</header>
 								</article>
@@ -56,7 +56,7 @@
 										<img src="images/pic03.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="outreach.html" class="link">Teaching and Outreach</a></h3>
+										<h3><a href="pastprojects.html" class="link">Past Projects</a></h3>
 										<p></p>
 									</header>
 								</article>
@@ -114,8 +114,7 @@
 					<footer id="footer">
 						<div class="inner">
 							<ul class="icons">
-								<li><a href="#" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
-								<li><a href="#" class="icon brands alt fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
+								<li><a href="www.linkedin.com/in/adesai705" class="icon brands alt fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
 							</ul>
 							<ul class="copyright">
 								<li>Design: <a href="https://html5up.net">HTML5 UP</a></li>
