--- a/aboutme.html
+++ b/aboutme.html
@@ -19,7 +19,7 @@
 
 				<!-- Header -->
 					<header id="header">
-						<a href="index.html" class="logo"><strong>Forty</strong> <span>by HTML5 UP</span></a>
+						<a href="index.html" class="logo"><strong>Anmol Desai</strong> </a>
 						<nav>
 							<a href="#menu">Menu</a>
 						</nav>
@@ -94,7 +94,7 @@
 					<footer id="footer">
 						<div class="inner">
 							<ul class="icons">
-								<li><a href="www.linkedin.com/in/adesai705" class="icon brands alt fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
+								<li><a href="https://www.linkedin.com/in/adesai705/" class="icon brands alt fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
 							</ul>
 							<ul class="copyright">
 								<li>Design: <a href="https://html5up.net">HTML5 UP</a></li>
