--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 					<footer id="footer">
 						<div class="inner">
 							<ul class="icons">
-								<li><a href="www.linkedin.com/in/adesai705" class="icon brands alt fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
+								<li><a href="https://www.linkedin.com/in/adesai705/" class="icon brands alt fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
 							</ul>
 							<ul class="copyright">
 								<li>Design: <a href="https://html5up.net">HTML5 UP</a></li>
