--- a/outreach.html
+++ b/outreach.html
@@ -20,7 +20,7 @@
 				<!-- Header -->
 				<!-- Note: The "styleN" class below should match that of the banner element. -->
 					<header id="header" class="alt style2">
-						<a href="index.html" class="logo"><strong>Forty</strong> <span>by HTML5 UP</span></a>
+						<a href="index.html" class="logo"><strong>Anmol Desai</strong> </a>
 						<nav>
 							<a href="#menu">Menu</a>
 						</nav>
@@ -115,7 +115,7 @@
 					<footer id="footer">
 						<div class="inner">
 							<ul class="icons">
-								<li><a href="www.linkedin.com/in/adesai705" class="icon brands alt fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
+								<li><a href="https://www.linkedin.com/in/adesai705/" class="icon brands alt fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
 							</ul>
 							<ul class="copyright">
 								<li>Design: <a href="https://html5up.net">HTML5 UP</a></li>
